--- a/index.html
+++ b/index.html
@@ -5,8 +5,21 @@
     <title>HTML Academy: Нёрдс</title>
   </head>
   <body>
+    <header>
+      <img src="logo.png">
+      <nav class="site_nav">
+        <ul class="nav_list">
+          <li class="nav_item"><a href="" class="nav_link">СТУДИЯ</a></li>
+          <li class="nav_item"><a href="" class="nav_link">КЛИЕНТЫ</a></li>
+          <li class="nav_item"><a href="" class="nav_link">МАГАЗИН</a></li>
+          <li class="nav_item"><a href="" class="nav_link">КОНТАКТЫ</a></li>
+        </ul>
+      </nav>
+      <ul class="cart">
+        <li><a>КОРЗИНА</a></li>
+      </ul>
+    </header>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
 
   </body>
 </html>
