--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <title>HTML Academy: Нёрдс</title>
   </head>
   <body>
+
     <header>
       <img src="logo.png">
+
       <nav class="site_nav">
         <ul class="nav_list">
           <li class="nav_item"><a href="" class="nav_link">СТУДИЯ</a></li>
@@ -15,11 +17,47 @@
           <li class="nav_item"><a href="" class="nav_link">КОНТАКТЫ</a></li>
         </ul>
       </nav>
+
       <ul class="cart">
         <li><a>КОРЗИНА</a></li>
       </ul>
     </header>
 
+
+    <main>
+      <h1>Nerds</h1>
+
+      <ul>
+        <li>
+          <h2>ВЕБ-САЙТЫ</h2>
+          <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
+          <a href="">ЗАКАЗАТЬ</a>
+        </li>
+        <li>
+          <h2>ПРИЛОЖЕНИЯ</h2>
+          <p>Покорите топ-10 приложений в AppStore и Google Play</p>
+          <a href="">ЗАКАЗАТЬ</a>
+        </li>
+        <li>
+          <h2>ПРЕЗЕНТАЦИИ</h2>
+          <p>Вы даже не подозреваете,  насколько вы изумительны!</p>
+          <a href="">ЗАКАЗАТЬ</a>
+        </li>
+      </ul>
+    </main>
+
+    <footer>
+      <ul>
+        <li><a href=""><img src="" alt="vk"></a></li>
+        <li><a href=""><img src="" alt="fb"></a></li>
+        <li><a href=""><img src="" alt="instagram"></a></li>
+      </ul>
+
+      <section>
+        <h2>Давайте дружить, это выгодно!</h2>
+        <p>Скидка 10% для друзей из социальныхсетей.</p>
+      </section>
+    </footer>
 
   </body>
 </html>
