--- a/index.html
+++ b/index.html
@@ -29,16 +29,19 @@
 
       <ul>
         <li>
+          <img src="" alt="ВЕБ-САЙТЫ">
           <h2>ВЕБ-САЙТЫ</h2>
           <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
           <a href="">ЗАКАЗАТЬ</a>
         </li>
         <li>
+          <img src="" alt="ПРИЛОЖЕНИЯ">
           <h2>ПРИЛОЖЕНИЯ</h2>
           <p>Покорите топ-10 приложений в AppStore и Google Play</p>
           <a href="">ЗАКАЗАТЬ</a>
         </li>
         <li>
+          <img src="" alt="ПРЕЗЕНТАЦИИ">
           <h2>ПРЕЗЕНТАЦИИ</h2>
           <p>Вы даже не подозреваете,  насколько вы изумительны!</p>
           <a href="">ЗАКАЗАТЬ</a>
