--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         </ul>
       </nav>
 
-      <ul class="cart">
-        <li><a>КОРЗИНА</a></li>
+      <ul class="cart_nav">
+        <li class="cart_list"><a class="cart_link">КОРЗИНА</a></li>
       </ul>
     </header>
 
@@ -27,38 +27,38 @@
     <main>
       <h1>Nerds</h1>
 
-      <ul>
-        <li>
-          <img src="" alt="ВЕБ-САЙТЫ">
-          <h2>ВЕБ-САЙТЫ</h2>
-          <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
-          <a href="">ЗАКАЗАТЬ</a>
+      <ul class="order">
+        <li class="order_list">
+          <img src="" alt="ВЕБ-САЙТЫ" class="order_img">
+          <h2 class="order_header">ВЕБ-САЙТЫ</h2>
+          <p class="order_txt">Мир никогда не будет прежним после того как увидит ваш сайт!</p>
+          <a href="" class="order_red_button">ЗАКАЗАТЬ</a>
         </li>
-        <li>
-          <img src="" alt="ПРИЛОЖЕНИЯ">
-          <h2>ПРИЛОЖЕНИЯ</h2>
-          <p>Покорите топ-10 приложений в AppStore и Google Play</p>
-          <a href="">ЗАКАЗАТЬ</a>
+        <li class="order">
+          <img src="" alt="ПРИЛОЖЕНИЯ" class="order_img">
+          <h2 class="order_header">ПРИЛОЖЕНИЯ</h2>
+          <p class="order_txt">Покорите топ-10 приложений в AppStore и Google Play</p>
+          <a href="order_green_button">ЗАКАЗАТЬ</a>
         </li>
-        <li>
-          <img src="" alt="ПРЕЗЕНТАЦИИ">
-          <h2>ПРЕЗЕНТАЦИИ</h2>
-          <p>Вы даже не подозреваете,  насколько вы изумительны!</p>
-          <a href="">ЗАКАЗАТЬ</a>
+        <li class="order">
+          <img src="" alt="ПРЕЗЕНТАЦИИ" class="order_img">
+          <h2 class="order_header">ПРЕЗЕНТАЦИИ</h2>
+          <p class="order_txt">Вы даже не подозреваете,  насколько вы изумительны!</p>
+          <a href="" class="order_yellow_button">ЗАКАЗАТЬ</a>
         </li>
       </ul>
     </main>
 
     <footer>
-      <ul>
-        <li><a href=""><img src="" alt="vk"></a></li>
-        <li><a href=""><img src="" alt="fb"></a></li>
-        <li><a href=""><img src="" alt="instagram"></a></li>
+      <ul class="social">
+        <li class="social_list"><a href="" class="socisl_linl"><img src="" alt="vk" class="social_vk"></a></li>
+        <li class="social_list"><a href="" class="social_link"><img src="" alt="fb" class="social_fb"></a></li>
+        <li class="social_list"><a href="" class="social_link"><img src="" alt="instagram" class="social_instagram"></a></li>
       </ul>
 
-      <section>
-        <h2>Давайте дружить, это выгодно!</h2>
-        <p>Скидка 10% для друзей из социальныхсетей.</p>
+      <section class="footer_txt">
+        <h2 class="footer_txt_header">Давайте дружить, это выгодно!</h2>
+        <p class="footer_txt_p">Скидка 10% для друзей из социальныхсетей.</p>
       </section>
     </footer>
 
