--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 
       <nav class="site_nav">
         <ul class="nav_list">
-          <li class="nav_item"><a href="" class="nav_link">СТУДИЯ</a></li>
-          <li class="nav_item"><a href="" class="nav_link">КЛИЕНТЫ</a></li>
-          <li class="nav_item"><a href="" class="nav_link">МАГАЗИН</a></li>
-          <li class="nav_item"><a href="" class="nav_link">КОНТАКТЫ</a></li>
+          <li class="nav_item"><a href="">СТУДИЯ</a></li>
+          <li class="nav_item"><a href="">КЛИЕНТЫ</a></li>
+          <li class="nav_item"><a href="">МАГАЗИН</a></li>
+          <li class="nav_item"><a href="">КОНТАКТЫ</a></li>
         </ul>
       </nav>
 
       <ul class="cart_nav">
-        <li class="cart_list"><a class="cart_link">КОРЗИНА</a></li>
+        <li class="cart_list"><a>КОРЗИНА</a></li>
       </ul>
     </header>
 
@@ -29,21 +29,21 @@
 
       <ul class="order">
         <li class="order_list">
-          <img src="" alt="ВЕБ-САЙТЫ" class="order_img">
-          <h2 class="order_header">ВЕБ-САЙТЫ</h2>
-          <p class="order_txt">Мир никогда не будет прежним после того как увидит ваш сайт!</p>
+          <img src="" alt="ВЕБ-САЙТЫ" width="100%" height="100%">
+          <h2>ВЕБ-САЙТЫ</h2>
+          <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
           <a href="" class="order_red_button">ЗАКАЗАТЬ</a>
         </li>
         <li class="order">
-          <img src="" alt="ПРИЛОЖЕНИЯ" class="order_img">
-          <h2 class="order_header">ПРИЛОЖЕНИЯ</h2>
-          <p class="order_txt">Покорите топ-10 приложений в AppStore и Google Play</p>
+          <img src="" alt="ПРИЛОЖЕНИЯ" width="100%" height="100%">
+          <h2>ПРИЛОЖЕНИЯ</h2>
+          <p>Покорите топ-10 приложений в AppStore и Google Play</p>
           <a href="order_green_button">ЗАКАЗАТЬ</a>
         </li>
         <li class="order">
-          <img src="" alt="ПРЕЗЕНТАЦИИ" class="order_img">
-          <h2 class="order_header">ПРЕЗЕНТАЦИИ</h2>
-          <p class="order_txt">Вы даже не подозреваете,  насколько вы изумительны!</p>
+          <img src="" alt="ПРЕЗЕНТАЦИИ" width="100%" height="100%">
+          <h2>ПРЕЗЕНТАЦИИ</h2>
+          <p>Вы даже не подозреваете,  насколько вы изумительны!</p>
           <a href="" class="order_yellow_button">ЗАКАЗАТЬ</a>
         </li>
       </ul>
@@ -51,9 +51,9 @@
 
     <footer>
       <ul class="social">
-        <li class="social_list"><a href="" class="socisl_linl"><img src="" alt="vk" class="social_vk"></a></li>
-        <li class="social_list"><a href="" class="social_link"><img src="" alt="fb" class="social_fb"></a></li>
-        <li class="social_list"><a href="" class="social_link"><img src="" alt="instagram" class="social_instagram"></a></li>
+        <li class="social_list"><a href="" class="socisl_linl_vk"><img src="" alt="vk" width="100%" height="100%"></a></li>
+        <li class="social_list"><a href="" class="social_link_fb"><img src="" alt="fb" width="100%" height="100%"></a></li>
+        <li class="social_list"><a href="" class="social_link_instagram"><img src="" alt="instagram" width="100%" height="100%"></a></li>
       </ul>
 
       <section class="footer_txt">
