--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
 
     <header>
-      <img src="logo.png">
+      <img src="logo.png" alt="Nerds" width="" height="">
 
       <nav class="site_nav">
         <ul class="nav_list">
@@ -29,19 +29,19 @@
 
       <ul class="order">
         <li class="order_list">
-          <img src="" alt="ВЕБ-САЙТЫ" width="100%" height="100%">
+          <img src="" alt="ВЕБ-САЙТЫ" width="" height="">
           <h2>ВЕБ-САЙТЫ</h2>
           <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
           <a href="" class="order_red_button">ЗАКАЗАТЬ</a>
         </li>
         <li class="order">
-          <img src="" alt="ПРИЛОЖЕНИЯ" width="100%" height="100%">
+          <img src="" alt="ПРИЛОЖЕНИЯ" width="" height="">
           <h2>ПРИЛОЖЕНИЯ</h2>
           <p>Покорите топ-10 приложений в AppStore и Google Play</p>
           <a href="order_green_button">ЗАКАЗАТЬ</a>
         </li>
         <li class="order">
-          <img src="" alt="ПРЕЗЕНТАЦИИ" width="100%" height="100%">
+          <img src="" alt="ПРЕЗЕНТАЦИИ" width="" height="">
           <h2>ПРЕЗЕНТАЦИИ</h2>
           <p>Вы даже не подозреваете,  насколько вы изумительны!</p>
           <a href="" class="order_yellow_button">ЗАКАЗАТЬ</a>
@@ -51,9 +51,9 @@
 
     <footer>
       <ul class="social">
-        <li class="social_list"><a href="" class="socisl_linl_vk"><img src="" alt="vk" width="100%" height="100%"></a></li>
-        <li class="social_list"><a href="" class="social_link_fb"><img src="" alt="fb" width="100%" height="100%"></a></li>
-        <li class="social_list"><a href="" class="social_link_instagram"><img src="" alt="instagram" width="100%" height="100%"></a></li>
+        <li class="social_list"><a href="" class="socisl_linl_vk"><img src="" alt="vk" width="" height=""></a></li>
+        <li class="social_list"><a href="" class="social_link_fb"><img src="" alt="fb" width="" height=""></a></li>
+        <li class="social_list"><a href="" class="social_link_instagram"><img src="" alt="instagram" width="" height=""></a></li>
       </ul>
 
       <section class="footer_txt">
