--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <ul class="nav_list">
           <li class="nav_item"><a href="">СТУДИЯ</a></li>
           <li class="nav_item"><a href="">КЛИЕНТЫ</a></li>
-          <li class="nav_item"><a href="">МАГАЗИН</a></li>
+          <li class="nav_item"><a href="store.html">МАГАЗИН</a></li>
           <li class="nav_item"><a href="">КОНТАКТЫ</a></li>
         </ul>
       </nav>
