--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>HTML Academy: Нёрдс</title>
   </head>
   <body>
-
+<!--Верхняя панель ХЕЙДЕР-->
     <header>
       <img src="logo.png" alt="Nerds" width="" height="">
 
@@ -17,38 +17,119 @@
           <li class="nav_item"><a href="">КОНТАКТЫ</a></li>
         </ul>
       </nav>
-
+<!--КОРЗИНА-->
       <ul class="cart_nav">
         <li class="cart_list"><a>КОРЗИНА</a></li>
       </ul>
+<!--СЛАЙДЕР-->
+      <section class="head_bottom">
+        <ul class="slider_list">
+          <li>
+            <h1>Долго, дорого,  скрупулезно.</h1>
+            <p>Математически выверенный дизайн  для вашего
+              сайта или мобильного приложения.</p>
+            <a href="">УЗНАТЬ БОЛЬШЕ</a>
+            <img src="" alt="Изображение" width="" height="">
+          </li>
+          <li>
+            <h1>Любим математику как никто другой</h1>
+            <p>Никакого креатива, только
+              математические формулы  для расчета идеальных пропорций.</p>
+            <a href="">УЗНАТЬ БОЛЬШЕ</a>
+            <img src="" alt="Изображение" width="" height="">
+          </li>
+          <li>
+            <h1>Только ночь, только хардкор</h1>
+            <p>Работать днем, как все?
+               Мы против этого. Ближе к полуночи работа только начинается.</p>
+            <a href="">УЗНАТЬ БОЛЬШЕ</a>
+            <img src="" alt="Изображение" width="" height="">
+          </li>
+        </ul>
+      </section>
     </header>
 
 
     <main>
-      <h1>Nerds</h1>
-
-      <ul class="order">
-        <li class="order_list">
-          <img src="" alt="ВЕБ-САЙТЫ" width="" height="">
-          <h2>ВЕБ-САЙТЫ</h2>
-          <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
-          <a href="" class="order_red_button">ЗАКАЗАТЬ</a>
-        </li>
-        <li class="order">
-          <img src="" alt="ПРИЛОЖЕНИЯ" width="" height="">
-          <h2>ПРИЛОЖЕНИЯ</h2>
-          <p>Покорите топ-10 приложений в AppStore и Google Play</p>
-          <a href="order_green_button">ЗАКАЗАТЬ</a>
-        </li>
-        <li class="order">
-          <img src="" alt="ПРЕЗЕНТАЦИИ" width="" height="">
-          <h2>ПРЕЗЕНТАЦИИ</h2>
-          <p>Вы даже не подозреваете,  насколько вы изумительны!</p>
-          <a href="" class="order_yellow_button">ЗАКАЗАТЬ</a>
-        </li>
-      </ul>
+      <section class="product">
+        <h1>Nerds</h1>
+        <ul class="product_list">
+          <li>
+            <img src="" alt="ВЕБ-САЙТЫ" width="" height="">
+            <h2>ВЕБ-САЙТЫ</h2>
+            <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
+            <a href="" class="order_red_button">ЗАКАЗАТЬ</a>
+          </li>
+          <li>
+            <img src="" alt="ПРИЛОЖЕНИЯ" width="" height="">
+            <h2>ПРИЛОЖЕНИЯ</h2>
+            <p>Покорите топ-10 приложений в AppStore и Google Play</p>
+            <a href="order_green_button">ЗАКАЗАТЬ</a>
+          </li>
+          <li>
+            <img src="" alt="ПРЕЗЕНТАЦИИ" width="" height="">
+            <h2>ПРЕЗЕНТАЦИИ</h2>
+            <p>Вы даже не подозреваете,  насколько вы изумительны!</p>
+            <a href="" class="order_yellow_button">ЗАКАЗАТЬ</a>
+          </li>
+        </ul>
+      </section>
+<!--О КОМПАНИИ (СЛЕВА)-->
+      <section class="about_left">
+        <h2>Мы — маленькая,
+          но гордая дизайн-студия из Краснодара.</h2>
+        <p>Исповедуем принципы минимализма и чистоты.
+          Ставим математический рассчет превыше креатива.
+        Работаем непокладая рук как роботы.</p>
+        <p class="about_list">Выполняем заказы на разработку:</p>
+        <ul>
+          <li>Веб-сайтов любой сложности</li>
+          <li>Мобильных приложений для OS и Android</li>
+          <li>Слайдшоу и видео для корпоративных презентаций</li>
+        </ul>
+      </section>
+<!--О КОМПАНИИ (СПРАВА), КАРТИНКА, СТАТИСТИКА-->
+      <section class="about_right">
+        <img src="" alt="Nerds" width="" height="">
+        <p>с 2004 года Любим точность во всем:</p>
+        <ul class="about_stat">
+          <li><span>146%</span><br>
+              Уровень самоотдачи</li>
+          <li><span>100%</span><br>
+              Соблюдение сроков</li></li>
+          <li><span>50%</span><br>
+              Минимальная предоплата</li></li>
+        </ul>
+      </section>
+<!--Партнёры (серые лого)-->
+      <section class="logo_partners">
+        <ul class="partners_list">
+          <li>
+            <a href="htmlacademy.ru"> <img src="" alt="htmlacademy.ru" width="" height=""></a>
+          </li>
+          <li>
+            <a href=""> <img src="" alt="Borodinsky" width="" height=""></a>
+          </li>
+          <li>
+            <a href=""> <img src="" alt="Pink" width="" height=""></a>
+          </li>
+          <li>
+            <a href=""> <img src="" alt="Mishka" width="" height=""></a>
+          </li>
+        </ul>
+      </section>
+<!--Карта фоном + форма для связи-->
+      <section class="map">
+        <div class="adress">
+          <p class="contact_name">NЁRDS DESIGN STUDIO</p>
+          <P class="contact_adress">191186, Санкт-Петербург,<br>
+            ул. Б. Конюшенная, д. 19/8 <br>
+            тел. +7 (812) 275-75-75</P>
+          <button type="button" name="scribe">НАПИШИТЕ НАМ</button>
+        </div>
+      </section>
     </main>
-
+<!--FOOTER иконки соц.сети-->
     <footer>
       <ul class="social">
         <li class="social_list"><a href="" class="socisl_linl_vk"><img src="" alt="vk" width="" height=""></a></li>
@@ -57,7 +138,7 @@
       </ul>
 
       <section class="footer_txt">
-        <h2 class="footer_txt_header">Давайте дружить, это выгодно!</h2>
+        <h3 class="footer_txt_header">Давайте дружить, это выгодно!</h3>
         <p class="footer_txt_p">Скидка 10% для друзей из социальныхсетей.</p>
       </section>
     </footer>
