--- a/store.html
+++ b/store.html
@@ -5,7 +5,7 @@
     <title>HTML Academy: Нёрдс</title>
   </head>
   <body>
-
+<!--Верхняя панель ХЕЙДЕР-->
     <header>
       <img src="logo.png" alt="Nerds" width="" height="">
 
@@ -17,26 +17,28 @@
           <li class="nav_item"><a href="">КОНТАКТЫ</a></li>
         </ul>
       </nav>
-
+<!--КОРЗИНА-->
       <ul class="cart_nav">
         <li class="cart_list"><a>КОРЗИНА</a></li>
       </ul>
     </header>
-
+<!--конец-->
+<!--заголовок-->
     <main>
       <section>
         <h1>Магазин готовых шаблонов</h1>
       </section>
 
-      <section>
+<!--ПАРАМЕТРЫ ШАБЛОНОВ (слева)-->
+      <section class="parametrs">
         <p>Сетка:</p>
-        <ul>
+        <ul class="parametrs_web">
           <li>Адаптивная</li>
           <li>Фиксированная</li>
           <li>Резиновая</li>
         </ul>
         <p>Особенности:</p>
-        <ul>
+        <ul class="parametrs_option">
           <li>Слайдер</li>
           <li>Блок преимуществ</li>
           <li>Новости</li>
@@ -45,7 +47,8 @@
         </ul>
         <button type="button" name="show">Показать</button>
       </section>
-      <section>
+<!--Изобр. шаблонов справа-->
+      <section class="product_prev">
         <a href=""><img src="" alt="Шаблон1" width="" height=""></a>
         <a href=""><img src="" alt="Шаблон2" width="" height=""></a>
         <a href=""><img src="" alt="Шаблон3" width="" height=""></a>
@@ -54,7 +57,7 @@
         <a href=""><img src="" alt="Шаблон6" width="" height=""></a>
       </section>
     </main>
-
+<!--FOOTER иконки соц.сети-->
     <footer>
       <ul class="social">
         <li class="social_list"><a href="" class="socisl_linl_vk"><img src="" alt="vk" width="" height=""></a></li>
@@ -63,10 +66,9 @@
       </ul>
 
       <section class="footer_txt">
-        <h2 class="footer_txt_header">Давайте дружить, это выгодно!</h2>
+        <h3 class="footer_txt_header">Давайте дружить, это выгодно!</h3>
         <p class="footer_txt_p">Скидка 10% для друзей из социальныхсетей.</p>
       </section>
     </footer>
-
   </body>
 </html>
