--- a/store.html
+++ b/store.html
@@ -31,13 +31,20 @@
 
 <!--ПАРАМЕТРЫ ШАБЛОНОВ (слева)-->
       <section class="parametrs">
-        <p>Сетка:</p>
+        <p>СТОИМОСТЬ:</p>
+    <!--
+      =====Здесь должна быть форма====
+      |                               |
+      |                               |
+      ================================
+    -->
+        <p>СЕТКА:</p>
         <ul class="parametrs_web">
           <li>Адаптивная</li>
           <li>Фиксированная</li>
           <li>Резиновая</li>
         </ul>
-        <p>Особенности:</p>
+        <p>ОСОБЕННОСТИ:</p>
         <ul class="parametrs_option">
           <li>Слайдер</li>
           <li>Блок преимуществ</li>
@@ -45,10 +52,20 @@
           <li>Галерея</li>
           <li>Корзина</li>
         </ul>
-        <button type="button" name="show">Показать</button>
+        <button type="button" name="show">ПОКАЗАТЬ</button>
       </section>
-<!--Изобр. шаблонов справа-->
+<!--Изобр. шаблонов справа, сортировка-->
       <section class="product_prev">
+  <!--====ФОРМА СОРТИРОВКИ====-->
+        <div class="sort_txt"><p>СОРТИРОВАТЬ:</p></div>
+        <div class="sort_form">
+          <button type="button" name="cost_sort">ПО ЦЕНЕ</button>
+          <button type="button" name="type_sort">ПО ТИПУ</button>
+          <button type="button" name="name_sort">ПО НАЗВАНИЮ</button>
+          <button type="button" name="sort_up">v</button>
+          <button type="button" name="sort_down">^</button>
+        </div>
+  <!-- Изображения товаров-->
         <a href=""><img src="" alt="Шаблон1" width="" height=""></a>
         <a href=""><img src="" alt="Шаблон2" width="" height=""></a>
         <a href=""><img src="" alt="Шаблон3" width="" height=""></a>
