--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
 <!--Верхняя панель ХЕЙДЕР-->
     <header>
-      <img src="logo.png" alt="Nerds" width="" height="">
+      <img src="img/nerds-logo.svg" class="nerds_logo" alt="Nerds" width="160" height="65">
 
       <nav class="site_nav">
         <ul class="nav_list">
@@ -18,56 +18,58 @@
         </ul>
       </nav>
 <!--КОРЗИНА-->
-      <ul class="cart_nav">
-        <li class="cart_list"><a>КОРЗИНА</a></li>
-      </ul>
+      <div>
+        <ul class="cart_nav">
+          <li class="cart_list"><img src="img\basket-icon.png" alt="Корзина" class="basket_ico"><a href="">КОРЗИНА</a></li>
+        </ul>
+      </div>
 <!--СЛАЙДЕР-->
-      <section class="head_bottom">
+      <div class="head_bottom">
         <ul class="slider_list">
           <li>
             <h1>Долго, дорого,  скрупулезно.</h1>
             <p>Математически выверенный дизайн  для вашего
               сайта или мобильного приложения.</p>
             <a href="">УЗНАТЬ БОЛЬШЕ</a>
-            <img src="" alt="Изображение" width="" height="">
+            <img src="img/slide-picture.png" alt="Изображение" width="698" height="413">
           </li>
           <li>
             <h1>Любим математику как никто другой</h1>
             <p>Никакого креатива, только
               математические формулы  для расчета идеальных пропорций.</p>
             <a href="">УЗНАТЬ БОЛЬШЕ</a>
-            <img src="" alt="Изображение" width="" height="">
+            <img src="img/slide2.png" alt="Изображение" width="698" height="413">
           </li>
           <li>
             <h1>Только ночь, только хардкор</h1>
             <p>Работать днем, как все?
                Мы против этого. Ближе к полуночи работа только начинается.</p>
             <a href="">УЗНАТЬ БОЛЬШЕ</a>
-            <img src="" alt="Изображение" width="" height="">
+            <img src="img/slide3.png" alt="Изображение" width="698" height="413">
           </li>
         </ul>
-      </section>
+      </div>
     </header>
 
 
     <main>
       <section class="product">
-        <h1>Nerds</h1>
+        <h1>Дизайн-студия Nёrds</h1>
         <ul class="product_list">
           <li>
-            <img src="" alt="ВЕБ-САЙТЫ" width="" height="">
+            <img src="img/advantage-picture-red.png" alt="ВЕБ-САЙТЫ" width="300" height="146">
             <h2>ВЕБ-САЙТЫ</h2>
             <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
             <a href="" class="order_red_button">ЗАКАЗАТЬ</a>
           </li>
           <li>
-            <img src="" alt="ПРИЛОЖЕНИЯ" width="" height="">
+            <img src="img/advantage-picture-green.png" alt="ВЕБ-САЙТЫ" width="300" height="146">
             <h2>ПРИЛОЖЕНИЯ</h2>
             <p>Покорите топ-10 приложений в AppStore и Google Play</p>
             <a href="order_green_button">ЗАКАЗАТЬ</a>
           </li>
           <li>
-            <img src="" alt="ПРЕЗЕНТАЦИИ" width="" height="">
+            <img src="img/advantage-picture-yellow.png" alt="ВЕБ-САЙТЫ" width="300" height="146">
             <h2>ПРЕЗЕНТАЦИИ</h2>
             <p>Вы даже не подозреваете,  насколько вы изумительны!</p>
             <a href="" class="order_yellow_button">ЗАКАЗАТЬ</a>
@@ -76,8 +78,9 @@
       </section>
 <!--О КОМПАНИИ (СЛЕВА)-->
       <section class="about_left">
-        <h2>Мы — маленькая,
-          но гордая дизайн-студия из Краснодара.</h2>
+        <h2>О компании</h2>
+        <p>Мы — маленькая,
+          но гордая дизайн-студия из Краснодара.</p>
         <p>Исповедуем принципы минимализма и чистоты.
           Ставим математический рассчет превыше креатива.
         Работаем непокладая рук как роботы.</p>
@@ -90,7 +93,8 @@
       </section>
 <!--О КОМПАНИИ (СПРАВА), КАРТИНКА, СТАТИСТИКА-->
       <section class="about_right">
-        <img src="" alt="Nerds" width="" height="">
+        <h2>Статистика</h2>
+        <img src="img/nerds-picture.png" alt="Nerds" width="360" height="208">
         <p>с 2004 года Любим точность во всем:</p>
         <ul class="about_stat">
           <li><span>146%</span><br>
@@ -102,24 +106,25 @@
         </ul>
       </section>
 <!--Партнёры (серые лого)-->
-      <section class="logo_partners">
+      <div class="logo_partners">
         <ul class="partners_list">
           <li>
-            <a href="htmlacademy.ru"> <img src="" alt="htmlacademy.ru" width="" height=""></a>
+            <a href="htmlacademy.ru"> <img src="img/htmlacdemy-logo.png" alt="htmlacademy.ru" width="199" height="68"></a>
           </li>
           <li>
-            <a href=""> <img src="" alt="Borodinsky" width="" height=""></a>
+            <a href=""> <img src="img/borodinsli-logo.png" alt="Borodinsky" width="209" height="90"></a>
           </li>
           <li>
-            <a href=""> <img src="" alt="Pink" width="" height=""></a>
+            <a href=""> <img src="img/pink-logo.png" alt="Pink" width="185" height="52"></a>
           </li>
           <li>
-            <a href=""> <img src="" alt="Mishka" width="" height=""></a>
+            <a href=""> <img src="img/mishka-logo.png" alt="Mishka" width="173" height="84"></a>
           </li>
         </ul>
-      </section>
+      </div>
 <!--Карта фоном + форма для связи-->
       <section class="map">
+        <h2>Обратная связь</h2>
         <div class="adress">
           <p class="contact_name">NЁRDS DESIGN STUDIO</p>
           <P class="contact_adress">191186, Санкт-Петербург,<br>
@@ -132,15 +137,15 @@
 <!--FOOTER иконки соц.сети-->
     <footer>
       <ul class="social">
-        <li class="social_list"><a href="" class="socisl_linl_vk"><img src="" alt="vk" width="" height=""></a></li>
-        <li class="social_list"><a href="" class="social_link_fb"><img src="" alt="fb" width="" height=""></a></li>
-        <li class="social_list"><a href="" class="social_link_instagram"><img src="" alt="instagram" width="" height=""></a></li>
+        <li class="social_list"><a href="" class="socisl_linl_vk"><img src="img/vk-icon.png" alt="vk" width="26" height="15"></a></li>
+        <li class="social_list"><a href="" class="social_link_fb"><img src="img/fb-icon.png" alt="fb" width="12" height="22"></a></li>
+        <li class="social_list"><a href="" class="social_link_instagram"><img src="img/insta-icon.png" alt="instagram" width="21" height="21"></a></li>
       </ul>
 
-      <section class="footer_txt">
-        <h3 class="footer_txt_header">Давайте дружить, это выгодно!</h3>
+      <div class="footer_txt">
+        <p class="footer_txt_header">Давайте дружить, это выгодно!</p>
         <p class="footer_txt_p">Скидка 10% для друзей из социальныхсетей.</p>
-      </section>
+      </div>
     </footer>
 
   </body>
