--- a/index.html
+++ b/index.html
@@ -27,21 +27,21 @@
       <div class="head_bottom">
         <ul class="slider_list">
           <li>
-            <h1>Долго, дорого,  скрупулезно.</h1>
+            <p>Долго, дорого,  скрупулезно.</p>
             <p>Математически выверенный дизайн  для вашего
               сайта или мобильного приложения.</p>
             <a href="">УЗНАТЬ БОЛЬШЕ</a>
             <img src="img/slide-picture.png" alt="Изображение" width="698" height="413">
           </li>
           <li>
-            <h1>Любим математику как никто другой</h1>
+            <p>Любим математику как никто другой</p>
             <p>Никакого креатива, только
               математические формулы  для расчета идеальных пропорций.</p>
             <a href="">УЗНАТЬ БОЛЬШЕ</a>
             <img src="img/slide2.png" alt="Изображение" width="698" height="413">
           </li>
           <li>
-            <h1>Только ночь, только хардкор</h1>
+            <p>Только ночь, только хардкор</p>
             <p>Работать днем, как все?
                Мы против этого. Ближе к полуночи работа только начинается.</p>
             <a href="">УЗНАТЬ БОЛЬШЕ</a>
