--- a/store.html
+++ b/store.html
@@ -68,15 +68,33 @@
           <button type="button" name="sort_down">^</button>
         </div>
         <h2>Результаты поиска</h2>
+
+        
   <!-- Изображения товаров
-  заменить на дивы с списке!
 -->
-        <div class=""><a href=""><img src="img\img-sedona-jpg.png" alt="Sedona" width="360" height="576"></a></div>
-        <div class=""><a href=""><img src="img\img-pink-jpg.png" alt="Pink" width="360" height="576"></a></div>
-        <div class=""></div><a href=""><img src="img\img-barbershop-jpg.png" alt="Barbershop" width="360" height="576"></a></div>
-        <div class=""><a href=""><img src="img\img-mishka-jpg.png" alt="Mishka" width="360" height="576"></a></div>
-        <div class=""><a href=""><img src="img\img-aplus-jpg.png" alt="Aplus" width="360" height="576"></a></div>
-        <div class=""><a href=""><img src="img\img-kvast-jpg.png" alt="Kvast" width="360" height="576"></a></div>
+<!--1--><div class="">
+          <a href=""><img src="img\img-sedona-jpg.png" alt="Sedona" width="360" height="576"></a>
+        </div>
+
+<!--2--><div class="">
+          <a href=""><img src="img\img-pink-jpg.png" alt="Pink" width="360" height="576"></a>
+        </div>
+
+<!--3--><div class="">
+          <a href=""><img src="img\img-barbershop-jpg.png" alt="Barbershop" width="360" height="576"></a>
+        </div>
+
+<!--4--><div class="">
+          <a href=""><img src="img\img-mishka-jpg.png" alt="Mishka" width="360" height="576"></a>
+        </div>
+
+<!--5--><div class="">
+          <a href=""><img src="img\img-aplus-jpg.png" alt="Aplus" width="360" height="576"></a>
+        </div>
+
+<!--6--><div class="">
+          <a href=""><img src="img\img-kvast-jpg.png" alt="Kvast" width="360" height="576"></a>
+        </div>
       </section>
     </main>
 <!--FOOTER иконки соц.сети-->
