--- a/store.html
+++ b/store.html
@@ -69,7 +69,7 @@
         </div>
         <h2>Результаты поиска</h2>
 
-        
+
   <!-- Изображения товаров
 -->
 <!--1--><div class="">
@@ -97,6 +97,18 @@
         </div>
       </section>
     </main>
+<!--Карта фоном + форма для связи-->
+    <section class="map">
+      <h2>Обратная связь</h2>
+      <div class="adress">
+        <p class="contact_name">NЁRDS DESIGN STUDIO</p>
+        <P class="contact_adress">191186, Санкт-Петербург,<br>
+          ул. Б. Конюшенная, д. 19/8 <br>
+          тел. +7 (812) 275-75-75</P>
+        <button type="button" name="scribe">НАПИШИТЕ НАМ</button>
+      </div>
+    </section>
+
 <!--FOOTER иконки соц.сети-->
     <footer>
       <ul class="social">
