--- a/store.html
+++ b/store.html
@@ -7,7 +7,9 @@
   <body>
 <!--Верхняя панель ХЕЙДЕР-->
      <header>
-      <a href="index.html" class="nerds_logo"><img src="img/nerds-logo.svg" alt="Nerds" width="160" height="65"></a>
+      <div class="logo">
+        <a href="index.html" class="nerds_logo"><img src="img/nerds-logo.svg" alt="Nerds" width="160" height="65"></a>
+      </div>
       <nav class="site_nav">
         <ul class="nav_list">
           <li class="nav_item"><a href="">СТУДИЯ</a></li>
