--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
 <!--Верхняя панель ХЕЙДЕР-->
     <header>
-      <img src="img/nerds-logo.svg" class="nerds_logo" alt="Nerds" width="160" height="65">
+      <div class="logo"><img src="img/nerds-logo.svg" class="nerds_logo" alt="Nerds" width="160" height="65"></div>
 
       <nav class="site_nav">
         <ul class="nav_list">
