--- a/store.html
+++ b/store.html
@@ -20,23 +20,18 @@
             <li class="nav_item"><a href="">Контакты</a></li>
           </ul>
         </nav>
-<!--КОРЗИНА<img src="img/basket-icon.png" alt="Корзина" class="basket_ico" width="15" height="15">-->
         <div class="cart nav_item">
           <img src="img/basket-icon.png" alt="Корзина" class="basket_ico" width="15" height="15">
           <a href="" class="cart_ico">Корзина</a>
         </div>
       </div>
     </header>
-<!--конец-->
-<!--заголовок-->
     <main>
       <div class="presets_txt">
         <h1>Магазин готовых шаблонов</h1>
       </div>
-<!--ПАРАМЕТРЫ ШАБЛОНОВ (слева)-->
       <section class="parametrs">
         <h2 class="visually-hidden">Параметры товаров</h2>
-<!--==ФОРМА============-->
         <form action="" type="post" class="form_presets">
           <div class="parametrs_coast">
             <p>Стоимость:</p>
@@ -99,11 +94,11 @@
           <p>Сортировать:</p>
         </div>
         <div class="sort_form">
-          <button type="button" name="cost_sort">по цене</button>
-          <button type="button" name="type_sort">по типу</button>
-          <button type="button" name="name_sort">по названию</button>
-          <button type="button" name="sort_up">v</button>
-          <button type="button" name="sort_down">^</button>
+          <a href="#" class="cost_sort">по цене</a>
+          <a href="#" class="type_sort sort_no_active">по типу</a>
+            <a href="#" class="name_sort sort_no_active">по названию</a>
+              <a href="#" class="sort_down">v</a>
+                <a href="#" class="sort_up sort_no_active">^</a>
         </div>
         <h2 class="visually-hidden">Результаты поиска</h2>
   <!-- Изображения товаров-->
@@ -215,7 +210,7 @@
 <!--FOOTER иконки соц.сети-->
     <footer>
       <div class="social">
-        <a href="" class="socisl_link_vk"><div class="social_list"><div class="vk"></div></div></a>
+        <a href="" class="social_link_vk"><div class="social_list"><div class="vk"></div></div></a>
         <a href="" class="social_link_fb"><div class="social_list"><div class="fb"></div></div></a>
         <a href="" class="social_link_instagram"><div class="social_list"><div class="insta"></div></div></a>
       </div>
