--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 <!--FOOTER иконки соц.сети-->
 <footer>
   <div class="social">
-    <a href="" class="socisl_link_vk">
+    <a href="" class="social_link_vk">
       <div class="social_list">
         <div class="vk"></div>
       </div>
